[gd_scene load_steps=50 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/tamagachi.png" type="Texture" id=2]
[ext_resource path="res://assets/Menu/MainMenu.png" type="Texture" id=3]
[ext_resource path="res://assets/TamaScreenFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/RPGGuy.gd" type="Script" id=5]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://scenes/entities/food.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Menu/tamagachi.png" type="Texture" id=8]
[ext_resource path="res://assets/spritesheets/tama_guy_spritesheet.tres" type="SpriteFrames" id=9]
[ext_resource path="res://assets/Menu/tamaFood.png" type="Texture" id=10]
[ext_resource path="res://assets/Menu/BigX.png" type="Texture" id=11]
[ext_resource path="res://scripts/ui/BootNum.gd" type="Script" id=12]
[ext_resource path="res://scripts/ui/BookNum.gd" type="Script" id=13]
[ext_resource path="res://scripts/ui/MeatNum.gd" type="Script" id=14]
[ext_resource path="res://scripts/ui/Level.gd" type="Script" id=15]
[ext_resource path="res://assets/lcd_overlay.png" type="Texture" id=16]

[sub_resource type="AtlasTexture" id=30]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=31]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=32]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=33]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=34]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=35]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=36]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=37]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=38]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=39]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 2304, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=40]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 2560, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=44]
flags = 1
atlas = ExtResource( 10 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=45]
flags = 1
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=46]
flags = 1
atlas = ExtResource( 10 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ SubResource( 44 ) ],
"loop": true,
"name": "book",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": true,
"name": "boot",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "meat",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=27]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "FEED",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "HARVEST",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "MAIN",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "TRAIN",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=47]
flags = 1
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
flags = 1
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ null, SubResource( 47 ), SubResource( 48 ) ],
"loop": false,
"name": "default",
"speed": 1.0
} ]

[node name="Menu" type="Control"]
script = ExtResource( 6 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="UI"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="UI"]
visible = false
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true

[node name="LeftButton" type="Button" parent="UI"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 432.0
margin_top = 448.0
margin_right = 480.0
margin_bottom = 496.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CenterButton" type="Button" parent="UI"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 488.0
margin_top = 472.0
margin_right = 536.0
margin_bottom = 520.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="RightButton" type="Button" parent="UI"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 544.0
margin_top = 448.0
margin_right = 592.0
margin_bottom = 496.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Tama" type="AnimatedSprite" parent="UI"]
position = Vector2( 512, 258 )
scale = Vector2( 3, 3 )
frames = SubResource( 41 )
frame = 8
playing = true

[node name="Screen" type="Control" parent="UI/Tama"]
margin_left = -32.0
margin_top = -16.0
margin_right = 32.0
margin_bottom = 48.0

[node name="MeatControl" type="Control" parent="UI/Tama/Screen"]
margin_left = 1.0
margin_top = 1.0
margin_right = 19.0
margin_bottom = 10.0

[node name="MeatSprite" type="AnimatedSprite" parent="UI/Tama/Screen/MeatControl"]
position = Vector2( 4, 5 )
frames = SubResource( 43 )
animation = "meat"

[node name="MeatNum" type="RichTextLabel" parent="UI/Tama/Screen/MeatControl"]
margin_left = 8.0
margin_right = 18.0
margin_bottom = 10.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 4 )
meta_underlined = false
text = "0"
scroll_active = false
script = ExtResource( 14 )

[node name="BootControl" type="Control" parent="UI/Tama/Screen"]
margin_left = 16.0
margin_top = 1.0
margin_right = 34.0
margin_bottom = 11.0

[node name="Boot" type="AnimatedSprite" parent="UI/Tama/Screen/BootControl"]
position = Vector2( 4, 5 )
frames = SubResource( 43 )
animation = "boot"

[node name="BootNum" type="RichTextLabel" parent="UI/Tama/Screen/BootControl"]
margin_left = 8.0
margin_right = 18.0
margin_bottom = 10.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 4 )
meta_underlined = false
text = "0"
scroll_active = false
script = ExtResource( 12 )

[node name="BookControl" type="Control" parent="UI/Tama/Screen"]
margin_left = 31.0
margin_top = 1.0
margin_right = 49.0
margin_bottom = 11.0

[node name="Book" type="AnimatedSprite" parent="UI/Tama/Screen/BookControl"]
position = Vector2( 4, 5 )
frames = SubResource( 43 )
animation = "book"

[node name="BookNum" type="RichTextLabel" parent="UI/Tama/Screen/BookControl"]
margin_left = 8.0
margin_right = 18.0
margin_bottom = 10.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 4 )
meta_underlined = false
text = "0"
scroll_active = false
script = ExtResource( 13 )

[node name="LevelControl" type="Control" parent="UI/Tama/Screen"]
margin_left = 48.0
margin_top = 0.5
margin_right = 70.0
margin_bottom = 10.5

[node name="Label" type="RichTextLabel" parent="UI/Tama/Screen/LevelControl"]
margin_left = -1.0
margin_right = 21.0
margin_bottom = 10.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 4 )
meta_underlined = false
text = "LV"
scroll_active = false

[node name="LevelNum" type="RichTextLabel" parent="UI/Tama/Screen/LevelControl"]
margin_left = 8.0
margin_right = 17.0
margin_bottom = 9.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 4 )
meta_underlined = false
text = "0"
scroll_active = false
script = ExtResource( 15 )

[node name="GuyControl" type="Control" parent="UI/Tama/Screen"]
margin_left = 34.0
margin_top = 48.0
margin_right = 34.0
margin_bottom = 48.0
script = ExtResource( 5 )
foodScene = ExtResource( 7 )

[node name="GuySprite" type="AnimatedSprite" parent="UI/Tama/Screen/GuyControl"]
scale = Vector2( 2, 2 )
frames = ExtResource( 9 )
animation = "IDLE"
playing = true

[node name="TrainTimer" type="Timer" parent="UI/Tama/Screen/GuyControl"]
wait_time = 5.0

[node name="LCDEffect" type="TextureRect" parent="UI/Tama/Screen"]
margin_right = 384.0
margin_bottom = 384.0
rect_scale = Vector2( 0.167, 0.167 )
texture = ExtResource( 16 )

[node name="MenuSelection" type="AnimatedSprite" parent="UI"]
visible = false
position = Vector2( 512, 336 )
scale = Vector2( 4, 4 )
frames = SubResource( 5 )
animation = "FEED"

[node name="BigX" type="AnimatedSprite" parent="UI"]
position = Vector2( 512, 344 )
scale = Vector2( 4, 4 )
frames = SubResource( 49 )

[connection signal="books_changed" from="." to="UI/Tama/Screen/BookControl/BookNum" method="_on_Menu_books_changed"]
[connection signal="boots_changed" from="." to="UI/Tama/Screen/BootControl/BootNum" method="_on_Menu_boots_changed"]
[connection signal="meats_changed" from="." to="UI/Tama/Screen/MeatControl/MeatNum" method="_on_Menu_meats_changed"]
[connection signal="pressed" from="UI/LeftButton" to="UI" method="_on_LeftButton_pressed"]
[connection signal="pressed" from="UI/CenterButton" to="UI" method="_on_CenterButton_pressed"]
[connection signal="pressed" from="UI/RightButton" to="UI" method="_on_RightButton_pressed"]
[connection signal="visibility_changed" from="UI/Tama/Screen/GuyControl" to="UI/Tama/Screen/GuyControl" method="_on_RPGGuy_visibility_changed"]
[connection signal="timeout" from="UI/Tama/Screen/GuyControl/TrainTimer" to="UI/Tama/Screen/GuyControl" method="_on_TrainTimer_timeout"]
